<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.view.ViewPager
            android:id="@id/viewPager_thing_details_image"
            android:layout_width="fill_parent"
            android:layout_height="200.0dip"
            android:layout_marginBottom="6.0dip" />

        <LinearLayout
            android:id="@id/linearLayout_pager_indicator_thing_image"
            android:layout_width="fill_parent"
            android:layout_height="30.0dip"
            android:layout_alignBottom="@id/viewPager_thing_details_image"
            android:layout_marginBottom="10.0dip"
            android:gravity="center"
            android:orientation="horizontal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/rela_temp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewPager_thing_details_image"
        android:layout_marginBottom="18.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip">

        <TextView
            android:id="@id/textView_thing_brand"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="商品品牌"
            android:textColor="#ff9099a7"
            android:textSize="13.0sp" />

        <TextView
            android:id="@id/textView_thing_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_thing_brand"
            android:layout_marginTop="3.0dip"
            android:gravity="left"
            android:text="商品名称"
            android:textColor="@color/theme_color_text_balck"
            android:textSize="22.0sp" />

        <RatingBar
            android:id="@id/ratingbar"
            style="@style/fiveStarRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_thing_title"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="14.0dip"
            android:isIndicator="true"
            android:visibility="gone" />

        <TextView
            android:id="@id/tv_ratingbar_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ratingbar"
            android:layout_marginLeft="7.0dip"
            android:layout_toRightOf="@id/ratingbar"
            android:text="@string/score_and_review2"
            android:textColor="@color/theme_color_text_1"
            android:textSize="12.0sp"
            android:visibility="gone" />

        <RatingBar
            android:id="@id/ratingbar_no_score"
            style="@style/fiveGrayStarRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_thing_title"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="14.0dip"
            android:isIndicator="true" />

        <TextView
            android:id="@id/tv_ratingbar_no_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ratingbar_no_score"
            android:layout_marginLeft="7.0dip"
            android:layout_toRightOf="@id/ratingbar_no_score"
            android:text="@string/text_no_rating_score"
            android:textColor="@color/theme_color_text_1"
            android:textSize="12.0sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#fff5f5f5" />
    <RelativeLayout
        android:id="@id/thingDescribeLayout"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:background="@drawable/rec_shape_trans_grey_clickable">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14.0dip"
            android:text="@string/thingDescribe"
            android:textColor="@color/theme_color_text_content_gray"
            android:textSize="15.0sp" />

        <ImageView
            android:id="@id/right_arrow"
            android:layout_width="15.0dip"
            android:layout_height="15.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="14.0dip"
            android:scaleType="centerInside"
            android:src="@drawable/angle_right_grey" />

    </RelativeLayout>



    <RelativeLayout
        android:id="@id/buyChannelLayout"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:background="@drawable/rec_shape_trans_grey_clickable">
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#fff5f5f5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14.0dip"
            android:text="@string/buyChannel"
            android:textColor="@color/theme_color_text_content_gray"
            android:textSize="15.0sp" />

        <ImageView
            android:id="@id/right_arrow"
            android:layout_width="15.0dip"
            android:layout_height="15.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="14.0dip"
            android:scaleType="centerInside"
            android:src="@drawable/angle_right_grey" />

        <TextView
            android:id="@id/textView_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14.0dip"
            android:layout_marginRight="14.0dip"
            android:layout_toLeftOf="@id/right_arrow"
            android:text="￥62起"
            android:textColor="#AA4B0082"
            android:textSize="14.0sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#fff5f5f5" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@id/linear_thing_detail_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/rec_shape_trans_grey_clickable"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10.0dip">

                <ToggleButton
                    android:id="@id/toggleButton_like"
                    android:layout_width="24.0dip"
                    android:layout_height="24.0dip"
                    android:background="@drawable/toggle_button_favorite"
                    android:clickable="false"
                    android:textOff=""
                    android:textOn="" />

                <TextView
                    android:id="@id/textView_thing_detail_like_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18.0dip"
                    android:text="@string/thing_detail_like_num"
                    android:textColor="#ff9099a7"
                    android:textSize="12.0sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff5f5f5" />

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@id/linear_thing_detail_having"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/rec_shape_trans_grey_clickable"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10.0dip">

                <ToggleButton
                    android:id="@id/toggleButton_having"
                    android:layout_width="24.0dip"
                    android:layout_height="24.0dip"
                    android:background="@drawable/toggle_button_having"
                    android:clickable="false"
                    android:textOff=""
                    android:textOn="" />

                <TextView
                    android:id="@id/textView_thing_detail_having"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18.0dip"
                    android:text="@string/thing_detail_having_num"
                    android:textColor="#ff9099a7"
                    android:textSize="12.0sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#fff5f5f5" />
    <RelativeLayout
        android:id="@id/layout_user_reviews"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:background="@drawable/rec_shape_trans_grey_clickable">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14.0dip"
            android:text="@string/user_reviews"
            android:textColor="@color/theme_color_text_content_gray"
            android:textSize="15.0sp" />

        <ImageView
            android:id="@id/right_arrow"
            android:layout_width="15.0dip"
            android:layout_height="15.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="14.0dip"
            android:scaleType="centerInside"
            android:src="@drawable/angle_right_grey" />

        <TextView
            android:id="@id/textView_all_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14.0dip"
            android:layout_marginRight="14.0dip"
            android:layout_toLeftOf="@id/right_arrow"
            android:text="@string/all_reviews_count"
            android:textColor="@color/theme_color_text_desc_gray"
            android:textSize="14.0sp" />
    </RelativeLayout>
</LinearLayout>