<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include
        layout="@layout/subview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.cjj.MaterialRefreshLayout
        android:id="@id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <ListView
            android:id="@id/listView_thing_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:divider="@null"/>

    </com.cjj.MaterialRefreshLayout>

    <View
        android:id="@id/view_temp"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_above="@id/linear"
        android:background="@color/light_grey" />

    <LinearLayout
        android:id="@id/linear"
        android:layout_width="fill_parent"
        android:layout_height="49.0dip"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@id/linear_thing_detail_review"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="3.0"
                android:background="@drawable/rec_shape_trans_grey_clickable"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@id/imageButton_review"
                    android:layout_width="20.0dip"
                    android:layout_height="17.0dip"
                    android:scaleType="centerInside"
                    android:src="@drawable/review_button" />

                <TextView
                    android:id="@id/textView_thing_detail_comment_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1.0dip"
                    android:text="@string/comment"
                    android:textColor="#ff9099a7"
                    android:textSize="10.0sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/linear_thing_detail_share"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="3.0"
                android:background="@drawable/rec_shape_trans_grey_clickable"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@id/imageButton_share"
                    android:layout_width="20.0dip"
                    android:layout_height="17.0dip"
                    android:scaleType="centerInside"
                    android:src="@drawable/share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1.0dip"
                    android:text="@string/share"
                    android:textColor="#ff9099a7"
                    android:textSize="10.0sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/linear_write_reviews"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="4.0"
                android:background="@drawable/rec_shape_trans_grey_clickable"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/textView_thing_detail_write_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rec_shape_rounded_purple_grey_clickable"
                    android:drawableLeft="@drawable/thing_details_write"
                    android:drawablePadding="8.0dip"
                    android:paddingBottom="6.0dip"
                    android:paddingLeft="30.0dip"
                    android:paddingRight="30.0dip"
                    android:paddingTop="6.0dip"
                    android:text="@string/write_reviews"
                    android:textColor="@color/white"
                    android:textSize="14.0sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>